--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>VeriTube</title>
-</head>
-<body>
-  <h1>VeriTube</h1>
-  <p>Evalúa la veracidad del contenido.</p>
-
-  <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-    allowfullscreen></iframe>
-
-  <p>Video original de YouTube</p>
-
-  <button>✔ Verdadero</button>
-  <button>✖ Falso</button>
-  <button>⚠ Parcial</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>VeriTubes</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
+  </head>
+  <body>
+    <!-- Aquí React montará la app -->
+    <div id="root"></div>
+    <!-- Main bundle generado por Vite -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
